# corpus

./: CLAUDE.md  Cargo.toml  README.md  launch.sh
.github/: release-template.md
.github/workflows/: release.yml
src/: campaign.rs  main.rs  notes.rs  save.rs
src/ai/: companion.rs  computer.rs  mod.rs
src/body/: atlas.rs  host.rs  mod.rs
src/player/: inventory.rs  mod.rs  nanovehicle.rs  state.rs
src/ui/: display.rs  terminal.rs
