[package]
name = "corpus"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
termimad = "0"
rustyline = "14"
